added class to header img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="assets/political-failure.jpg">
+			<img class="header-img" src="assets/political-failure.jpg">
 		</header>
 		
 		<script src="" async defer></script>
