ascii brutalist building test

--- a/index.html
+++ b/index.html
@@ -9,9 +9,118 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<header>
-			<img class="header-img" src="assets/political-failure.jpg">
-		</header>
+		<section class="building">
+			<pre id="ascii-art">
+				.-+ .=*-:*.+****###**##%@-...===++++**      @%+++++*###%%@@#+**#           @%##@@@@@
+				.-+ :*#*##.++*****++++=*#-:..=========++=+++++++=::::.:::**+===            @%*#@@@@@
+				...-%@#++=.=+++++-.==++++*+.*%%%%###****++++++++****++++++++++++*          @#*#%@@@@
+				.-@@@*=--.=++++-..-===++**@@@@@@@@@@@@@@@@@@@@@@###******++++++*#*******####*#=-==-
+				=%%#+==:..+****+-:-====+#*##%@@@@@@@@@@@@@@=***      @@@@@@%*+*#%####*********####*
+					...#@@@@@@+:-====+*++*---===++#***%@+:==+            *++*@@@@@@@@@@@@@@@@%%%%
+					.=+--%@@@@@@@=.-=====*+*=---:....-...=*:.:::            +++*@@@@@@@@@@@%%#+==++*
+				..=+*@@@%%@@@%=.-=======..===============--==+++*        +++===+**#%%@@%***+=====
+				..--=+**##=+*%%*:.-=====++..==+**+++++++++++==++*+++++++++++++=:.::...:**+=========
+				.=. -+**+.-++++-.=%%###*#+..===          @@@%==*##****+++++++++*#****++**+++++=====
+				.:=  -++=..=+++++%@@@@@@@*:..===            @#==%@@@@@@@@@@@@@@@%##************#####
+				:=  -+-...=++++*%@@@@@@@-...===            @#=+%@@@@@@@@@@%***#        @@@@#**#%%##
+				:+ .-+-=+.=++++*#*+==-=#:...===++++*       @#=+=:.=-::=:%@*+++*           %#**@@@@@
+				...=%%**#.=++++**+==--=#::..=======+======+++++=:.-:..:.=+-:--            %#**@@@@@
+				..#@@#+++.=+==+=:.-++++++*.=%###**+++++++=+==++***++++++=======+          %#**=:-=-
+				=%%%%*=:  =+==+-..-=++++*#@@@@@@@@@@@@@@@@@@@@@@##*+++++++++=++***++++++******-:--:
+					.:..+*+++*+:-==+++#*##%%@@@@@@@@@@@@%-***            ++=+#%##**++++++*++#####
+					.-+-.-@@@@@@@+:-====+#+**----...:+:::*@+:==+            ++=*@@@@@@@@@@@@@@@@@@%%
+				..-+=#@@@@@@@@+:-====+*+**:--:....-...-+....:            ++=+%@@@@@@@@@@##*=----=
+				..:-=+*#%%++*@@#+.-====+++..=+=+====++==++======           ===-.....-.:##*=++=---==
+				.-. -+****=-+%%+:.-+++++**..++*##***+++++++++++***++++++++++++=:....:..++=--------=
+				.:=  -++*-.=++++-.+@@@%%%%+..===       @@@@@@#==*%%##**++======+*****++++******+++==
+				:=  -+=...=+++*#@@@@@@@@+:..=+=            @#=+%@@@@@@@@@@@@@@@@@@%%%####*****#####
+				.:= .-+-.=.=++++*#%@@@@@@-...=+=            @%=++*#%@@@@@@@%***#         @@@#**@@@@@
+				.:.:####*.=++++***+==-+#:...=++            @#++:........**+===*           %#**@@@@@
+				..+@@#+**.=++++**+==--=*+:..++=++=++=++++++++=+-........==-:--            @#**++*++
+				--#%%@#+:  =++++-..-===+++*.=%####***+++++++++++***+++++++++++++***##%@@   @#**-::..
+					=: .=++++-..-===++**@@@@@@@@@@@@@@@@@@@@@@%%#####***+++++***************+==-:
+					.---..-%@%%@%+:-====+#**##%%@@@@@@@@@@@%=***         @@@%*+*@@@@@@@%%%%%%#######
+				..=+--#@@@@@@@+:-====+*++*---:....=:..=%=:==+            **+*@@@@@@@@@@@@@@%####%
+				...:=+*%@@@@@@@@+:-====+*+*+. ......:-:.:=:.:::            *+++===****#@@@###+=====
+				.--.=**###+=*%%#=.-====+++:.=+=====+==+==++=--=+**##%@     **++:..:...:*#*=++======
+				.:+  =+***+--=*#=..-====++*..+++******+++++=++++***++++++++*++++=::-::.:+*+=========
+				.:+  =+*+:.=++++-:*%%%%%%%+..++=    @@@@@@@@@%++#@@%%%######****##******************
+				.:+  =+-...=+++*#@@@@@@@@+...+++            @#++%@@@@@@@@@@@@@@@@@%%%%%%%%%%####%###
+				.:- .=+-=+.=+++**#%%@@@@@-...+++            @#++=-==+++**@@%**##           @%##@@@@@
+				.:.:####*.=++++***+==-+#:...=++            @#++:........**+===*           %#**@@@@@
+				..+@@#+**.=++++**+==--=*+:..++=++=++=++++++++=+-........==-:--            @#**++*++
+				--#%%@#+:  =++++-..-===+++*.=%####***+++++++++++***+++++++++++++***##%@@   @#**-::..
+					=: .=++++-..-===++**@@@@@@@@@@@@@@@@@@@@@@%%#####***+++++***************+==-:
+					.---..-%@%%@%+:-====+#**##%%@@@@@@@@@@@%=***         @@@%*+*@@@@@@@%%%%%%#######
+				..=+--#@@@@@@@+:-====+*++*---:....=:..=%=:==+            **+*@@@@@@@@@@@@@@%####%
+				...:=+*%@@@@@@@@+:-====+*+*+. ......:-:.:=:.:::            *+++===****#@@@###+=====
+				.--.=**###+=*%%#=.-====+++:.=+=====+==+==++=--=+**##%@     **++:..:...:*#*=++======
+				.:+  =+***+--=*#=..-====++*..+++******+++++=++++***++++++++*++++=::-::.:+*+=========
+				.:+  =+*+:.=++++-:*%%%%%%%+..++=    @@@@@@@@@%++#@@%%%######****##******************
+				.:+  =+-...=+++*#@@@@@@@@+...+++            @#++%@@@@@@@@@@@@@@@@@%%%%%%%%%%####%###
+				.:- .=+-=+.=+++**#%%@@@@@-...+++            @#++=-==+++**@@%**##           @%##@@@@@
+				.:.:####*.=++++***+==-+#:...=++            @#++:........**+===*           %#**@@@@@
+				..+@@#+**.=++++**+==--=*+:..++=++=++=++++++++=+-........==-:--            @#**++*++
+				--#%%@#+:  =++++-..-===+++*.=%####***+++++++++++***+++++++++++++***##%@@   @#**-::..
+					=: .=++++-..-===++**@@@@@@@@@@@@@@@@@@@@@@%%#####***+++++***************+==-:
+					.---..-%@%%@%+:-====+#**##%%@@@@@@@@@@@%=***         @@@%*+*@@@@@@@%%%%%%#######
+				..=+--#@@@@@@@+:-====+*++*---:....=:..=%=:==+            **+*@@@@@@@@@@@@@@%####%
+				...:=+*%@@@@@@@@+:-====+*+*+. ......:-:.:=:.:::            *+++===****#@@@###+=====
+				.--.=**###+=*%%#=.-====+++:.=+=====+==+==++=--=+**##%@     **++:..:...:*#*=++======
+				.:+  =+***+--=*#=..-====++*..+++******+++++=++++***++++++++*++++=::-::.:+*+=========
+				.:+  =+*+:.=++++-:*%%%%%%%+..++=    @@@@@@@@@%++#@@%%%######****##******************
+				.:+  =+-...=+++*#@@@@@@@@+...+++            @#++%@@@@@@@@@@@@@@@@@%%%%%%%%%%####%###
+				.:- .=+-=+.=+++**#%%@@@@@-...+++            @#++=-==+++**@@%**##           @%##@@@@@
+				.:.:####*.=++++***+==-+#:...=++            @#++:........**+===*           %#**@@@@@
+				..+@@#+**.=++++**+==--=*+:..++=++=++=++++++++=+-........==-:--            @#**++*++
+				--#%%@#+:  =++++-..-===+++*.=%####***+++++++++++***+++++++++++++***##%@@   @#**-::..
+					=: .=++++-..-===++**@@@@@@@@@@@@@@@@@@@@@@%%#####***+++++***************+==-:
+					.---..-%@%%@%+:-====+#**##%%@@@@@@@@@@@%=***         @@@%*+*@@@@@@@%%%%%%#######
+				..=+--#@@@@@@@+:-====+*++*---:....=:..=%=:==+            **+*@@@@@@@@@@@@@@%####%
+				...:=+*%@@@@@@@@+:-====+*+*+. ......:-:.:=:.:::            *+++===****#@@@###+=====
+				.--.=**###+=*%%#=.-====+++:.=+=====+==+==++=--=+**##%@     **++:..:...:*#*=++======
+				.:+  =+***+--=*#=..-====++*..+++******+++++=++++***++++++++*++++=::-::.:+*+=========
+				.:+  =+*+:.=++++-:*%%%%%%%+..++=    @@@@@@@@@%++#@@%%%######****##******************
+				.:+  =+-...=+++*#@@@@@@@@+...+++            @#++%@@@@@@@@@@@@@@@@@%%%%%%%%%%####%###
+				.:- .=+-=+.=+++**#%%@@@@@-...+++            @#++=-==+++**@@%**##           @%##@@@@@
+				.:.:####*.=++++***+==-+#:...=++            @#++:........**+===*           %#**@@@@@
+				..+@@#+**.=++++**+==--=*+:..++=++=++=++++++++=+-........==-:--            @#**++*++
+				--#%%@#+:  =++++-..-===+++*.=%####***+++++++++++***+++++++++++++***##%@@   @#**-::..
+					=: .=++++-..-===++**@@@@@@@@@@@@@@@@@@@@@@%%#####***+++++***************+==-:
+					.---..-%@%%@%+:-====+#**##%%@@@@@@@@@@@%=***         @@@%*+*@@@@@@@%%%%%%#######
+				..=+--#@@@@@@@+:-====+*++*---:....=:..=%=:==+            **+*@@@@@@@@@@@@@@%####%
+				...:=+*%@@@@@@@@+:-====+*+*+. ......:-:.:=:.:::            *+++===****#@@@###+=====
+				.--.=**###+=*%%#=.-====+++:.=+=====+==+==++=--=+**##%@     **++:..:...:*#*=++======
+				.:+  =+***+--=*#=..-====++*..+++******+++++=++++***++++++++*++++=::-::.:+*+=========
+				.:+  =+*+:.=++++-:*%%%%%%%+..++=    @@@@@@@@@%++#@@%%%######****##******************
+				.:+  =+-...=+++*#@@@@@@@@+...+++            @#++%@@@@@@@@@@@@@@@@@%%%%%%%%%%####%###
+				.:- .=+-=+.=+++**#%%@@@@@-...+++            @#++=-==+++**@@%**##           @%##@@@@@
+				.:.:####*.=++++***+==-+#:...=++            @#++:........**+===*           %#**@@@@@
+				..+@@#+**.=++++**+==--=*+:..++=++=++=++++++++=+-........==-:--            @#**++*++
+				--#%%@#+:  =++++-..-===+++*.=%####***+++++++++++***+++++++++++++***##%@@   @#**-::..
+					=: .=++++-..-===++**@@@@@@@@@@@@@@@@@@@@@@%%#####***+++++***************+==-:
+					.---..-%@%%@%+:-====+#**##%%@@@@@@@@@@@%=***         @@@%*+*@@@@@@@%%%%%%#######
+				..=+--#@@@@@@@+:-====+*++*---:....=:..=%=:==+            **+*@@@@@@@@@@@@@@%####%
+				...:=+*%@@@@@@@@+:-====+*+*+. ......:-:.:=:.:::            *+++===****#@@@###+=====
+				.--.=**###+=*%%#=.-====+++:.=+=====+==+==++=--=+**##%@     **++:..:...:*#*=++======
+				.:+  =+***+--=*#=..-====++*..+++******+++++=++++***++++++++*++++=::-::.:+*+=========
+				.:+  =+*+:.=++++-:*%%%%%%%+..++=    @@@@@@@@@%++#@@%%%######****##******************
+				.:+  =+-...=+++*#@@@@@@@@+...+++            @#++%@@@@@@@@@@@@@@@@@%%%%%%%%%%####%###
+				.:- .=+-=+.=+++**#%%@@@@@-...+++            @#++=-==+++**@@%**##           @%##@@@@@
+				.:.:####*.=++++***+==-+#:...=++            @#++:........**+===*           %#**@@@@@
+				..+@@#+**.=++++**+==--=*+:..++=++=++=++++++++=+-........==-:--            @#**++*++
+				--#%%@#+:  =++++-..-===+++*.=%####***+++++++++++***+++++++++++++***##%@@   @#**-::..
+					=: .=++++-..-===++**@@@@@@@@@@@@@@@@@@@@@@%%#####***+++++***************+==-:
+					.---..-%@%%@%+:-====+#**##%%@@@@@@@@@@@%=***         @@@%*+*@@@@@@@%%%%%%#######
+				..=+--#@@@@@@@+:-====+*++*---:....=:..=%=:==+            **+*@@@@@@@@@@@@@@%####%
+				...:=+*%@@@@@@@@+:-====+*+*+. ......:-:.:=:.:::            *+++===****#@@@###+=====
+				.--.=**###+=*%%#=.-====+++:.=+=====+==+==++=--=+**##%@     **++:..:...:*#*=++======
+				.:+  =+***+--=*#=..-====++*..+++******+++++=++++***++++++++*++++=::-::.:+*+=========
+				.:+  =+*+:.=++++-:*%%%%%%%+..++=    @@@@@@@@@%++#@@%%%######****##******************
+				.:+  =+-...=+++*#@@@@@@@@+...+++            @#++%@@@@@@@@@@@@@@@@@%%%%%%%%%%####%###
+				.:- .=+-=+.=+++**#%%@@@@@-...+++            @#++=-==+++**@@%**##           @%##@@@@@
+			</pre>
+		</section>
 		
 		<script src="" async defer></script>
 	</body>
