--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<!-- ARE.NA ITEMS -->
 			<figure class="item-container"  id="open-txt">
 				<img id="txtfile" src="assets/txt.png">
-				<figcaption>reclaiming_polish_brutalism.txt</figcaption>
+				<figcaption><a href="#">reclaiming_polish_brutalism.txt</a></figcaption>
 			</figure>
 
 			<!-- Fake Text Editor Window -->
