--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 				<figcaption><a href="#">reclaiming_polish_brutalism.txt</a></figcaption>
 			</figure>
 
-			<!-- Fake Text Editor Window -->
+			<figure class="item-container"  id="open-pic">
+				<img id="picfile" src="assets/img.png">
+				<figcaption><a href="#">rise_of_brutalist_web_design.gif</a></figcaption>
+			</figure>
+
+			<!-- text editor window -->
 			<div id="fake-window-wrapper">
 				<div id="fake-window">
 					<div class="window-header">
@@ -28,6 +33,19 @@
 					</div>
 					<div class="window-content">
 						<p>More than just changing tastes, the buildings in Poland showcase its long history of invasion, genocide, and occupation. Following World War II, architecture had become a utilitarian practice. Cheap and quick solutions using concrete, steel, and glass were commonplace substitutes for ornate design, sharply contrasting the city's medieval counterparts. The increased prevalence of the Brutalist movement in Poland was indicative of it being a symbol of modernity and a rebuttal to Western capitalism. It represented the mechanism of rebuilding a nation through the power of Communism.</p>
+					</div>
+				</div>
+			</div>
+
+			<!-- image window -->
+			<div id="fake-window-wrapper-image">
+				<div id="fake-window-image">
+					<div class="image-window-header">
+						<span>rise_of_brutalist_web_design.gif</span>
+						<button id="close-window-image">X</button>
+					</div>
+					<div class="image-window-content">
+						<img src="assets/brutalistwebdesign.gif" alt="Brutalist Web Design">
 					</div>
 				</div>
 			</div>
