--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
 				<figcaption><a href="#">rise_of_brutalist_web_design.gif</a></figcaption>
 			</figure>
 
+			<figure class="item-container"  id="open-link">
+				<a href="https://www.imaginarycloud.com/blog/why-we-need-web-brutalism"><img id="linkfile" src="assets/web.png">
+				<figcaption>why-we-need-web-brutalism.html</a></figcaption>
+			</figure>
+
+			<figure class="item-container"  id="open-vid">
+				<a href="https://www.youtube.com/watch?v=i5uTD_K6YyY"><img id="vidfile" src="assets/vid.png">
+				<figcaption>brutalism design trend.mp4</a></figcaption>
+			</figure>
+
+
 			<!-- text editor window -->
 			<div id="fake-window-wrapper">
 				<div id="fake-window">
