--- a/index.html
+++ b/index.html
@@ -200,6 +200,6 @@
 			</pre>
 		</section>
 		
-		<script src="script.js" async defer></script>
+		<script defer src="script.js"></script>
 	</body>
 </html>
