--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
+    <script defer src="arena.js"></script>
 	</head>
 	<body>
 
+    <header><h1></h1></header>
+    
 		<!-- ASCII BUILDING -->
 		<section class="content">
 
@@ -199,7 +203,6 @@
 			
 			</pre>
 		</section>
-		
-		<script defer src="script.js"></script>
+
 	</body>
 </html>
