--- a/index2.html
+++ b/index2.html
@@ -2,10 +2,53 @@
 	<head>
 		<title>Digital Brutalism</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="assets/style.css">
+		<script defer src="assets/arenaa.js"></script>
 	</head>
 	<body>
+		<main>
 	
-		<script src="" async defer></script>
+			<section id="website-info">
+				<h1><pre id="ascii-text">
+
+  ____ ___ ____ ___ _____  _    _                      
+  |  _ |_ _/ ___|_ _|_   _|/ \  | |                     
+  | | | | | |  _ | |  | | / _ \ | |                     
+  | |_| | | |_| || |  | |/ ___ \| |___                  
+  |____|___\____|___| |_/_/   \_|_____|                 
+   ____  ____  _   _ _____  _    _     ___ ____  __  __ 
+  | __ )|  _ \| | | |_   _|/ \  | |   |_ _/ ___||  \/  |
+  |  _ \| |_) | | | | | | / _ \ | |    | |\___ \| |\/| |
+  | |_) |  _ <| |_| | | |/ ___ \| |___ | | ___) | |  | |
+  |____/|_| \_\\___/  |_/_/   \_|_____|___|____/|_|  |_|
+														
+ 
+				</pre></h1>
+
+				<nav>
+					<ul>
+						<li>about↗</li>
+						<li><a href="https://www.are.na/nattakitta-chuasiriphattana/digital-brutalism-buorqfz9bag">are.na channel↗</a></li>
+					</ul>
+				</nav>
+
+				<footer>
+					<address>©2025 Rice Gallardo & Opal Chuasiriphattana</address>
+				</footer>
+			</section>
+
+
+			<section id="content">
+				<ul id="channel-blocks">
+				</ul>
+			</section>
+
+
+		</main>
+
+
+
+
 	</body>
 </html>
