testing new structure

--- a/index2.html
+++ b/index2.html
@@ -2,9 +2,9 @@
 	<head>
 		<title>Digital Brutalism</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="assets/style.css">
-		<script defer src="assets/arenaa.js"></script>
+		<!-- <link rel="stylesheet" href="assets2/reset.css"> -->
+		<link rel="stylesheet" href="assets2/style.css">
+		<script defer src="assets2/arenaa.js"></script>
 	</head>
 	<body>
 		<main>
@@ -27,21 +27,124 @@
 				</pre></h1>
 
 				<nav>
-					<ul>
+					<ul id="nav-links">
 						<li>about↗</li>
 						<li><a href="https://www.are.na/nattakitta-chuasiriphattana/digital-brutalism-buorqfz9bag">are.na channel↗</a></li>
 					</ul>
 				</nav>
 
 				<footer>
-					<address>©2025 Rice Gallardo & Opal Chuasiriphattana</address>
+					<address>©2025 rice gallardo & opal chuasiriphattana</address>
 				</footer>
 			</section>
 
 
 			<section id="content">
-				<ul id="channel-blocks">
-				</ul>
+				<!-- <ul id="channel-blocks">
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+					<li>block here</li>
+				</ul> -->
+
+				<div class="channel-blocks">
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+					<div class="item"> </div>
+				</div>
 			</section>
 
 
