this is fucked but at least the api works

--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,8 @@
 		<main>
 	
 			<section id="website-info">
-				<h1><pre id="ascii-text">
+				<div id="channel-title"
+></div>				<h1><pre id="ascii-text">
 
   ____ ___ ____ ___ _____  _    _                      
   |  _ |_ _/ ___|_ _|_   _|/ \  | |                     
@@ -29,7 +30,7 @@
 				<nav>
 					<ul id="nav-links">
 						<li>about↗</li>
-						<li><a href="https://www.are.na/nattakitta-chuasiriphattana/digital-brutalism-buorqfz9bag">are.na channel↗</a></li>
+						<li id="arena-link"><a href="https://www.are.na/nattakitta-chuasiriphattana/digital-brutalism-buorqfz9bag" target="_blank">are.na channel↗</a></li>
 					</ul>
 				</nav>
 
@@ -94,56 +95,7 @@
 				</ul> -->
 
 				<div class="channel-blocks">
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
-					<div class="item"> </div>
+					
 				</div>
 			</section>
 
