--- a/index2.html
+++ b/index2.html
@@ -10,10 +10,9 @@
 		<main>
 	
 			<section id="website-info">
-				<div id="channel-title"
-></div>				<h1><pre id="ascii-text">
-
-  ____ ___ ____ ___ _____  _    _                      
+				<!-- <div id="channel-title"></div>				 -->
+				<h1><pre id="ascii-text">
+   ____ ___ ____ ___ _____  _    _                      
   |  _ |_ _/ ___|_ _|_   _|/ \  | |                     
   | | | | | |  _ | |  | | / _ \ | |                     
   | |_| | | |_| || |  | |/ ___ \| |___                  
@@ -24,15 +23,22 @@
   | |_) |  _ <| |_| | | |/ ___ \| |___ | | ___) | |  | |
   |____/|_| \_\\___/  |_/_/   \_|_____|___|____/|_|  |_|
 														
- 
 				</pre></h1>
 
 				<nav>
 					<ul id="nav-links">
-						<li>about↗</li>
+						<li id="about-link"><a href="#">about↗</a></li>
 						<li id="arena-link"><a href="https://www.are.na/nattakitta-chuasiriphattana/digital-brutalism-buorqfz9bag" target="_blank">are.na channel↗</a></li>
 					</ul>
 				</nav>
+
+				<div id="popup" class="hidden">
+					<div class="popup-content">
+						<h2>about this website</h2>
+						<span id="close-popup">&times;</span>
+						<div id="channel-description"></div>
+					</div>
+				</div>				
 
 				<footer>
 					<address>©2025 rice gallardo & opal chuasiriphattana</address>
@@ -41,62 +47,8 @@
 
 
 			<section id="content">
-				<!-- <ul id="channel-blocks">
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-					<li>block here</li>
-				</ul> -->
-
-				<div class="channel-blocks">
-					
-				</div>
+	
+				<div class="channel-blocks"></div>
 			</section>
 
 
