image and link blocks

--- a/index2.html
+++ b/index2.html
@@ -49,6 +49,26 @@
 			<section id="content">
 	
 				<div class="channel-blocks"></div>
+
+				<div id="link-popup" class="popup hidden">
+					<div class="popup-content">
+						<span id="close-link-popup">&times;</span>
+						<h3 id="popup-title"></h3>
+						<div class="popup-flex-container">
+							<picture id="popup-image"></picture>
+							<p id="popup-description"></p>
+						</div>
+					<p><a id="popup-link" href="#" target="_blank">see the original ↗</a></p>
+					</div>
+				</div>
+				
+
+
+
+
+
+
+
 			</section>
 
 
