--- a/index2.html
+++ b/index2.html
@@ -57,13 +57,14 @@
 						<div class="popup-flex-container">
 							<picture id="popup-image"></picture>
 							<p id="popup-description"></p>
+							<div id="popup-attachment"></div>
 						</div>
 					<p><a id="popup-link" href="#" target="_blank">see the original ↗</a></p>
 					</div>
 				</div>
+
 				
-
-
+			
 
 
 
