--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- <link rel="stylesheet" href="assets2/reset.css"> -->
 		<link rel="stylesheet" href="assets2/style.css">
+		<script defer src="assets2/matter.js"></script>
 		<script defer src="assets2/arenaa.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.20.0/matter.min.js"></script>
 	</head>
 	<body>
 		<main>
@@ -29,6 +31,17 @@
 						<li id="arena-link"><a href="https://www.are.na/nattakitta-chuasiriphattana/digital-brutalism-buorqfz9bag" target="_blank">are.na channel↗</a></li>
 					</ul>
 				</nav>
+
+				<section class="categories">
+					<ul id="mjs-wrapper">
+							<li>Show All</li>
+							<li>Attachments</li>
+							<li>Images</li>
+							<li>Links</li>
+							<li>Media</li>
+							<li>Text</li>
+					</ul>
+				</section>				
 
 				<div id="popup" class="hidden">
 					<div class="popup-content">
