--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 	
 				<div class="channel-blocks"></div>
 
-				<div id="link-popup" class="popup hidden">
-					<div class="popup-content">
+				<div id="popup-content" class="popup-content hidden">
+					<!-- <div class="popup-content"> -->
 						<span id="close-link-popup">&times;</span>
 						<h3 id="popup-title"></h3>
 						<div class="popup-flex-container">
