--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<div class="channel-blocks"></div>
 
 				<div id="popup-content" class="popup-content hidden">
-					<!-- <div class="popup-content"> -->
+					<div class="popup-content">
 						<span id="close-link-popup">&times;</span>
 						<h3 id="popup-title"></h3>
 						<div class="popup-flex-container">
