--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 	
 				<div class="channel-blocks"></div>
 
-				<div id="popup-content" class="popup-content hidden">
+				<div id="hide-this">
+				<div id="popup-content" class="popup-hidden">
 					<div class="popup-content">
 						<span id="close-link-popup">&times;</span>
 						<h3 id="popup-title"></h3>
@@ -74,6 +75,7 @@
 					<p><a id="popup-link" href="#" target="_blank">see the original ↗</a></p>
 					</div>
 				</div>
+			</div>
 
 			</section>
 
