--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</section>				
 
 				<div id="popup" class="hidden">
-					<div class="popup-content">
+					<div class="popup-about-content">
 						<h2>about this website</h2>
 						<span id="close-popup">&times;</span>
 						<div id="channel-description"></div>
