--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 		<title>Digital Brutalism</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- <link rel="stylesheet" href="assets2/reset.css"> -->
-		<link rel="stylesheet" href="assets2/style.css">
+		<link rel="stylesheet" href="assets2/style2.css">
 		<script defer src="assets2/matter.js"></script>
 		<script defer src="assets2/arenaa.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.20.0/matter.min.js"></script>
@@ -62,8 +62,7 @@
 				<div class="channel-blocks"></div>
 
 
-
-				<div id="hide-this">
+				<!-- <div id="hide-this">
 				<div id="popup-content" class="popup-hidden">
 					<div class="popup-content">
 						<span id="close-link-popup">&times;</span>
@@ -77,7 +76,7 @@
 					<p><a id="popup-link" href="#" target="_blank">see the original ↗</a></p>
 					</div>
 				</div>
-			</div>
+			</div> -->
 
 			</section>
 
