fixed reset blocks functionality

--- a/index2.html
+++ b/index2.html
@@ -28,12 +28,12 @@
 
 				<section class="categories">
 					<ul id="mjs-wrapper">
-							<li>Show All</li>
-							<li>Attachments</li>
-							<li>Images</li>
-							<li>Links</li>
-							<li>Media</li>
-							<li>Text</li>
+							<li>show all</li>
+							<li>attachments</li>
+							<li>images</li>
+							<li>links</li>
+							<li>media</li>
+							<li>text</li>
 					</ul>
 				</section>				
 
