renaming, moving, finalizing desktop, improved toggle styling

--- a/OLD/mainold.html
+++ b/OLD/mainold.html
@@ -2,17 +2,16 @@
 	<head>
 		<title>Digital Brutalism</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="assets/reset.css">
-		<link rel="stylesheet" href="assets/style2.css">
+		<link rel="stylesheet" href="assets/rest.css">
+		<link rel="stylesheet" href="assets/style.css">
 		<script defer src="assets/matter.js"></script>
-		<script defer src="assets/arena2.js"></script>
-		<script defer src="assets/menu.js"></script>
+		<script defer src="assets/arenaa.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.20.0/matter.min.js"></script>
 	</head>
 	<body>
 		<main>
 	
-			<section id="website-title">
+			<section id="website-info">
 				<h1><pre id="ascii-text">
    ____ ___ ____ ___ _____  _    _                      
   |  _ |_ _/ ___|_ _|_   _|/ \  | |                     
@@ -26,50 +25,43 @@
   |____/|_| \_\\___/  |_/_/   \_|_____|___|____/|_|  |_|
 				</pre></h1>
 
+				<nav>
+					<ul id="nav-links">
+						<li id="about-link"><a href="#">about↗</a></li>
+						<li id="arena-link"><a href="https://www.are.na/nattakitta-chuasiriphattana/digital-brutalism-buorqfz9bag" target="_blank">are.na channel↗</a></li>
+					</ul>
+				</nav>
+
 				<section class="categories">
 					<ul id="mjs-wrapper">
-							<li>show all</li>
-							<li>attachments</li>
-							<li>images</li>
-							<li>links</li>
-							<li>media</li>
-							<li>text</li>
+							<li>Show All</li>
+							<li>Attachments</li>
+							<li>Images</li>
+							<li>Links</li>
+							<li>Media</li>
+							<li>Text</li>
 					</ul>
 				</section>				
 
-		
-				
-			</section>
-
-			<section id="about-website">
-				<div class="wrapper-info">
-					<div class="info-bar">
-						<div class="content">
-							<nav>
-								<a href="#">◌ about</a>
-							</nav>
-							<footer>
-								<address>©2025 rice gallardo & opal chuasiriphattana</address>
-							</footer>
-						</div>
-					</div>
-					<section class="main-info">
+				<div id="popup" class="hidden">
+					<div class="popup-about-content">
 						<h2>about this website</h2>
-					</section>
-				</div>
+						<span id="close-popup">&times;</span>
+						<div id="channel-description"></div>
+					</div>
+				</div>				
+
+				<footer>
+					<address>©2025 rice gallardo & opal chuasiriphattana</address>
+				</footer>
 			</section>
 
 
 			<section id="content">
-
-				<div class="wrapper-content">
-					<div class="content-bar">
-						<h4 id="content-bar-title">◌ channel contents</h4>
-					</div>
+	
 				<div class="channel-blocks"></div>
 
 			</section>
-
 
 		</main>
 
