--- a/main.html
+++ b/main.html
@@ -2,16 +2,17 @@
 	<head>
 		<title>Digital Brutalism</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="assets/rest.css">
+		<link rel="stylesheet" href="assets/reset.css">
 		<link rel="stylesheet" href="assets/style.css">
 		<script defer src="assets/matter.js"></script>
-		<script defer src="assets/arenaa.js"></script>
+		<script defer src="assets/arena.js"></script>
+		<script defer src="assets/menu.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.20.0/matter.min.js"></script>
 	</head>
 	<body>
 		<main>
 	
-			<section id="website-info">
+			<section id="website-title">
 				<h1><pre id="ascii-text">
    ____ ___ ____ ___ _____  _    _                      
   |  _ |_ _/ ___|_ _|_   _|/ \  | |                     
@@ -25,48 +26,48 @@
   |____/|_| \_\\___/  |_/_/   \_|_____|___|____/|_|  |_|
 				</pre></h1>
 
-				<nav>
-					<ul id="nav-links">
-						<li id="about-link"><a href="#">about↗</a></li>
-						<li id="arena-link"><a href="https://www.are.na/nattakitta-chuasiriphattana/digital-brutalism-buorqfz9bag" target="_blank">are.na channel↗</a></li>
-					</ul>
-				</nav>
-
 				<section class="categories">
 					<ul id="mjs-wrapper">
-							<li>Show All</li>
-							<li>Attachments</li>
-							<li>Images</li>
-							<li>Links</li>
-							<li>Media</li>
-							<li>Text</li>
+							<li class="category-item">show all</li>
+							<li class="category-item">attachments</li>
+							<li class="category-item">images</li>
+							<li class="category-item">links</li>
+							<li class="category-item">media</li>
+							<li class="category-item">text</li>
 					</ul>
 				</section>				
 
-				<div id="popup" class="hidden">
-					<div class="popup-about-content">
-						<h2>about this website</h2>
-						<span id="close-popup">&times;</span>
-						<div id="channel-description"></div>
-					</div>
-				</div>				
+		
+				
+			</section>
 
-				<footer>
-					<address>©2025 rice gallardo & opal chuasiriphattana</address>
-				</footer>
+			<section id="about-website">
+				<div class="wrapper-info">
+					<div class="info-bar">
+						<div class="content">
+							<nav>
+								<a href="#">◌ about</a>
+							</nav>
+						</div>
+					</div>
+					<section class="main-info">
+						<h2>about this website</h2>
+					</section>
+				</div>
 			</section>
 
 
 			<section id="content">
-	
+
+				<div class="wrapper-content">
+					<div class="content-bar">
+						<h4 id="content-bar-title">◌ channel contents</h4>
+					</div>
 				<div class="channel-blocks"></div>
 
 			</section>
 
 		</main>
-
-
-
 
 	</body>
 </html>
