--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Brutalism</title>
-	<link rel="stylesheet" href="assets/terminalstyle.css">
-	<script defer src="assets/terminal.js"></script>
-</head>
+<html>
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Digital Brutalism</title>
+    <link rel="stylesheet" href="assets/terminalstyle.css">
+    <script defer src="assets/terminal.js"></script>
+  </head>
 <body>
 
 	<section id="intro"></section>
