--- a/main.html
+++ b/main.html
@@ -13,6 +13,7 @@
 		<main>
 	
 			<section id="website-title">
+				<h5 id="coordinates">(0, 0)</h5>
 				<h1><pre id="ascii-text">
    ____ ___ ____ ___ _____  _    _                      
   |  _ |_ _/ ___|_ _|_   _|/ \  | |                     
